--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "pwa-routine",
+  "name": "routine-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "pinia": "^2.0.12",
+    "pinia-plugin-persist": "^1.0.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
